tests/baselines/reference/addMoreCallSignaturesToBaseSignature.errors.txt
addMoreCallSignaturesToBaseSignature.ts(10,13): error TS2454: Variable 'a' is used before being assigned.


==== addMoreCallSignaturesToBaseSignature.ts (1 errors) ====
    interface Foo {
        (): string;
    }
    
    interface Bar extends Foo {
        (key: string): string;
    }
    
    var a: Bar;
    var kitty = a();
                ~
!!! error TS2454: Variable 'a' is used before being assigned.
    